Worked on View single pet details and edit pet profiles

--- a/newP/templates/pet_owner/index.html
+++ b/newP/templates/pet_owner/index.html
@@ -13,7 +13,7 @@
 
 				{% if userdeets %}
 				
-				<button type="button" class="btn btn-outline-dark"> <a href="/allpets"> PET PROFILES </a> </button>
+				<button type="button" class="btn btn-outline-dark"> <a href="/mypets"> PET PROFILES </a> </button>
 					
 				<button type="button" class="btn btn-outline-dark"> <a href="/medics"> MEDICAL RECORDS </a> </button>
 
