--- a/newP/templates/vet/vet_login_layout.html
+++ b/newP/templates/vet/vet_login_layout.html
@@ -58,11 +58,11 @@
                 <nav>
                     <div class="admin_text_color">
                         <div class="nav">
-                            <a href="/admin/admin_dashboard">
+                            <a href="/vet/dashboard">
                             Dashboard
                             </a>
                             
-                            <a href="/admin/admin_dashboard">
+                            <a href="/vet/dashboard">
                                 
                                 Manage pets
                             </a>
