--- a/newP/templates/pet_owner/dashboard.html
+++ b/newP/templates/pet_owner/dashboard.html
@@ -17,7 +17,7 @@
 				
 				<div class="col-md-2 d-grid gap-2">
 
-					<button type="button" class="btn btn-outline-dark"> <a href="/allpets"> PET PROFILES </a> </button>
+					<button type="button" class="btn btn-outline-dark"> <a href="/mypets"> MY PETS </a> </button>
 					
 					<button type="button" class="btn btn-outline-dark"> <a href="/medics"> MEDICAL RECORDS </a> </button>
 
