--- a/newP/templates/pet_owner/mypets.html
+++ b/newP/templates/pet_owner/mypets.html
@@ -36,8 +36,12 @@
       <th scope="col">S/N</th>
       <th scope="col">Pet Name</th>
       <th scope="col">Category</th>
+      <th scope="col">Breed</th>
       <th scope="col">Picture</th>
+      <th scope="col">Status</th>
+      <th scope="col">Date Created</th>
       <th scope="col">Gender</th>
+
     </tr>
   </thead>
   <tbody>
@@ -47,12 +51,36 @@
       <th scope="row"> {{ loop.index}} </th>
       <td> {{ m.pet_name }} </td>
       <td> {{ m.catrelate.cat_name }} </td>
+      <td> {{ m.pet_breed }} </td>
       
-      <td><img src="{{url_for('static',filename='/collections/'+m.pet_pic) }}" height="100"></td>
+      <td><img src="{{url_for('static',filename='/collections/'+m.pet_pic) }}" height="100"> </td>
+
+      <td> {{ m.pet_status }} </td>
+      <td> {{ m.date_created }} </td>
 
       <td>       
           <a href="" class="btn btn-sm btn-success disabled"> {{m.pet_gender}}</a>
-          <a href="" class="btn btn-sm btn-primary">Edit</a> 
+
+          <a href="/edit_pet/{{ m.pet_id }}" class="btn btn-sm btn-primary">Edit</a> 
+
+          <a href="/pet_details/{{m.pet_id }}" class="btn btn-sm btn-primary">View Details</a> 
+
+          <!-- show modal -->
+
+          <button id="openModalBtn" class="btn btn-sm btn-danger .modal-lg"> Disable Pet 
+              <div id="myModal" class="modal">
+                  
+                  <div class="modal-content">
+                    <div class="modal-header" style="background-color: darkred;" > 
+                      <h6> Tell us why you want to disable Pet </h6>
+                    </div>
+                      <span class="close">&times;</span>
+                      <textarea name="disablepet" cols="30" rows="5"></textarea>
+                      
+                  </div>
+
+                </button>
+
           <a href="/deletepet/{{ m.pet_id }}" onclick="return confirm('Are you sure you want to delete {{ m.pet_name }}?')" class="btn btn-sm btn-danger">Delete</a> 
           
         </td>
@@ -61,9 +89,35 @@
 
   </tbody>
 </table>
-                            </div>
-                        </div>
+           </div>
+            </div>
 
     {% endblock admincontent %}
+
+<script type="text/javascript">
+
+  // Get references to elements
+const openModalBtn = document.getElementById("openModalBtn");
+const modal = document.getElementById("myModal");
+const closeBtn = document.getElementsByClassName("close")[0];
+
+// Open the modal
+openModalBtn.addEventListener("click", () => {
+    modal.style.display = "block";
+});
+
+// Close the modal
+closeBtn.addEventListener("click", () => {
+    modal.style.display = "none";
+});
+
+// Close the modal if clicked outside the content
+window.addEventListener("click", (event) => {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+});
+
+</script>
 
 {%endblock%}
