--- a/newP/templates/pet_owner/profile.html
+++ b/newP/templates/pet_owner/profile.html
@@ -9,34 +9,38 @@
 
 <div class="content" style="margin-top: 3%">
 	<h3>Edit Profile </h3>
-	  <form method="post" enctype="multipart/form-data">
+
+	<button> Edit profile </button>
+	  <form method="post" enctype="multipart/form-data" action="/profile">
 		  
 		  <div class="mb-3">
 			  {{ pform.fullname.label }}
-			  {{ pform.fullname.errors }}
 			  {{ pform.csrf_token }}
 			  {{ pform.fullname(class_="form-control", value = userdeets.user_fullname) }}
 		  </div>
 
 		  <div class="mb-3">
+			{{ pform.email.label }}
+			{{ pform.csrf_token }}
+			{{ pform.email(class_="form-control", value = userdeets.user_email) }}
+		</div>
+
+		  <div class="mb-3">
 			{{ pform.address.label }}
-			{{ pform.address.errors }}
 			{{ pform.csrf_token }}
 			{{ pform.address(class_="form-control", value = userdeets.user_address) }}
 		</div>
 
 		  <div class="mb-3">
 			  {% if userdeets.user_pix == None %}
-			  <p class="small text-warning"> Please Upload a Profile Picture </p>
+			  <p class="small"> Please Upload a Profile Picture </p>
 			  {% endif %}
 			  {{ pform.pix.label }}
-			  {{ pform.pix.errors }}
 			  {{ pform.pix(class_="form-control") }}
 		  </div>
 
 		  <div class="mb-3">
 			{{ pform.bio.label }}
-			{{ pform.bio.errors }}
 			{{ pform.csrf_token }}
 			{{ pform.bio(class_="form-control", value = userdeets.user_bio) }}
 		</div>
