--- a/newP/templates/pet_owner/dashboard.html
+++ b/newP/templates/pet_owner/dashboard.html
@@ -19,7 +19,7 @@
 
 					<button type="button" class="btn btn-outline-dark"> <a href="/mypets"> MY PETS </a> </button>
 					
-					<button type="button" class="btn btn-outline-dark"> <a href="/medics"> MEDICAL RECORDS </a> </button>
+					<button type="button" class="btn btn-outline-dark"> <a href="/appointments"> APPOINTMENTS  </a> </button>
 
 					<button type="button" class="btn btn-outline-dark"> <a href="/payment"> MY BILLS </a> </button>
 
