--- a/newP/templates/pet_owner/login.html
+++ b/newP/templates/pet_owner/login.html
@@ -51,7 +51,9 @@
 
     </form>
 
-          <div class="small"><a href="/signup">Don't have an account? Join us now! </a></div>
+          <div class="small"> <a href="/signup">Don't have an account? Join us now! </a> </div>
+
+          <div> <a href="/vet/login"> Login as Vet. </a> </div>
 
           </div>
 
