--- a/newP/templates/vet/login.html
+++ b/newP/templates/vet/login.html
@@ -54,8 +54,8 @@
         
             </form>
 
-            <div class="card-footer text-center py-3">
-                <div class="small"><a href="/vet/register">Don't have an admin account and want to become one, click me!</a></div>
+            <div class="text-center py-3">
+                <div class="small"><a href="/vet/register">Want to register as a Veterinary Doctor, click me!</a></div>
             </div>
         
                   </div>
