--- a/newP/templates/vet/signup.html
+++ b/newP/templates/vet/signup.html
@@ -46,8 +46,9 @@
             {{ signupform.btn(class_="btn btn-primary") }}
             {{ signupform.csrf_token }}
         </form>
-                </div>
-        <div class="card-footer text-center py-3">
+                
+    </div>
+        <div class="text-center py-3">
             <div class="small"><a href="/vet/login">Already a User? Click me to login</a></div>
         </div>
             </div>
