--- a/newP/templates/vet/vet_dashboard.html
+++ b/newP/templates/vet/vet_dashboard.html
@@ -2,16 +2,16 @@
 
 
 {% block header %}
-{%endblock%}
+{% endblock header%}
 
 {% block content %}
     
 <div class="content" style="background-color: white;padding:3em">
 
-  <p>This is your dashboard, please use the second-level menu to carry out tasks</p>
+  <p> Welcome Doc. This is your dashboard </p>
  </div>
  
-{%endblock%}
+{% endblock %}
 
 {% block morecontent %}
 {% endblock morecontent%} 
