--- a/newP/templates/pet_owner/mybills.html
+++ b/newP/templates/pet_owner/mybills.html
@@ -28,7 +28,7 @@
       <th scope="col">Full Name</th>
       <th scope="col">Amount</th>
       <th scope="col">Payment Status</th>
-      <th scope="col">Date</th>
+      <th scope="col">Deadline</th>
     </tr>
   </thead>
   <tbody>
