--- a/newP/templates/pet_owner/dashboard.html
+++ b/newP/templates/pet_owner/dashboard.html
@@ -21,7 +21,7 @@
 					
 					<button type="button" class="btn btn-outline-dark"> <a href="/pet_appointments"> APPOINTMENTS  </a> </button>
 
-					<button type="button" class="btn btn-outline-dark"> <a href="/payment"> MY BILLS </a> </button>
+					<button type="button" class="btn btn-outline-dark"> <a href="/bills_history"> BILLS HISTORY </a> </button>
 
 					<button type="button" class="btn btn-outline-dark"> <a href="/profile"> USER PROFILE </a> </button>
 
@@ -50,22 +50,6 @@
 				<div class="col background-pic">
 					</div>
 			 </div>
-
-
-		<!-- tetiarry navigators -->
-			<div class="row"> 
-					<div class="col tettiary-nav">
-						<ul style="display: flex;"> 
-							  <li> <a href ="https://www.madpaws.com.au/" target="blank"> Get a pet sitter today.. </a> </li>
-
-								<li> <a href ="vet.html">  Contact A Vet Today </a> </li>
-								
-									<li> <a href ="reports.html"> Reports & Analytics </a> </li>
-						</ul>
-					</div>
-
-			</div>
-
 
 
  <script src="jquery.js"></script>
