--- a/newP/templates/pet_owner/login_layout.html
+++ b/newP/templates/pet_owner/login_layout.html
@@ -24,14 +24,15 @@
 							</a>
 			 </div>
 
-				<div class="col-md-10">
-					<nav style="margin-left: 10%;">
+				<div class="col-md-2"> </div>
+
+					<div class="col-md-8">
+					<nav>				
 					<ul class ="horizontal-list">
 						
 						<li> <a href="/"> Home </a> </li>
 						<li> <a href="/about"> About </a> </li>
 						<li> <a href="/contactus"> Contact </a> <li>
-
 						<li> <a href="/profile"> Profile </a> </li>
 						<li> <a href="/signout"> Sign out </a> </li>
 				  
@@ -67,7 +68,7 @@
 
 		<!-- footer -->
 			<div class="row footer">
-				<div class="col-md"> 
+				<div class="col-md" style="margin-top: 3%;"> 
 						<p class="footer"> Get useful tips & unlimited access to our vet partners along with exclusive subscriber-only content directly at your finger tips. </p>
 						
 						<button class="btn btn-outline-dark"> Contact A Vet Today </button> <br><br>
