--- a/newP/templates/pet_owner/profile.html
+++ b/newP/templates/pet_owner/profile.html
@@ -18,11 +18,9 @@
 
 					<button type="button" class="btn btn-outline-dark"> <a href="/mypets"> MY PETS </a> </button>
 					
-					<button type="button" class="btn btn-outline-dark"> <a href="/medics"> MEDICAL RECORDS </a> </button>
+					<button type="button" class="btn btn-outline-dark"> <a href="/bills_history"> MY BILLS </a> </button>
 
-					<button type="button" class="btn btn-outline-dark"> <a href="/payment"> MY BILLS </a> </button>
-
-                    <button type="button" class="btn btn-outline-dark"> <a href="/book_appointment"> BOOK APPOINTMENT </a> </button>
+                    <button type="button" class="btn btn-outline-dark"> <a href="/pet_appointments"> APPOINTMENTS </a> </button>
 
 				</div>
 		
