--- a/newP/templates/pet_owner/book_appointment.html
+++ b/newP/templates/pet_owner/book_appointment.html
@@ -15,6 +15,12 @@
 		  </div>
 
 		  <div class="mb-3">
+			{{ appointment_form.current_weight.label }}
+			{{ appointment_form.csrf_token }}
+			{{ appointment_form.current_weight(class_="form-control") }}
+		  </div>
+
+		  <div class="mb-3">
 			{{ appointment_form.date.label }}
 			{{ appointment_form.csrf_token }}
 			{{ appointment_form.date(class_="form-control") }}
