--- a/newP/templates/pet_owner/logout_layout.html
+++ b/newP/templates/pet_owner/logout_layout.html
@@ -24,14 +24,16 @@
 							</a>
 			 </div>
 
-				<div class="col-md-9">
-					<nav style="margin-left: 20%;">
+				<div class="col-md-9"> </div>
+
+				<div class="col-md-8">
+					<nav>
 						<ul class ="horizontal-list">
-				<li> <a href="/"> Home </a> </li>
-				<li> <a href="/about"> About </a> </li>
-				<li> <a href="/signup">  Sign Up </a> </li>
-				<li> <a href="/login"> Login </a> </li>
-				<li> <a href="/contactus"> Contact </a> </li>
+						<li> <a href="/"> Home </a> </li>
+						<li> <a href="/about"> About </a> </li>
+						<li> <a href="/signup">  Sign Up </a> </li>
+						<li> <a href="/login"> Login </a> </li>
+						<li> <a href="/contactus"> Contact </a> </li>
 						</ul>
 					</nav>
 				</div>
@@ -77,7 +79,7 @@
 
 		<!-- footer -->
 			<div class="row footer">
-				<div class="col-md"> 
+				<div class="col-md" style="margin-top: 3%;"> 
 						<p class="footer"> Get useful tips & unlimited access to our vet partners along with exclusive subscriber-only content directly at your finger tips. </p>
 						<button class="btn btn-outline-dark"> Contact A Vet Today </button> <br><br>
 				</div>		
