--- a/newP/templates/pet_owner/profile.html
+++ b/newP/templates/pet_owner/profile.html
@@ -18,7 +18,7 @@
 
 					<button type="button" class="btn btn-outline-dark"> <a href="/mypets"> MY PETS </a> </button>
 					
-					<button type="button" class="btn btn-outline-dark"> <a href="/bills_history"> MY BILLS </a> </button>
+					<button type="button" class="btn btn-outline-dark"> <a href="/bills_history"> BILLS HISTORY </a> </button>
 
                     <button type="button" class="btn btn-outline-dark"> <a href="/pet_appointments"> APPOINTMENTS </a> </button>
 
