Ability for Pet owners to view transaction details

--- a/newP/static/css/css.css
+++ b/newP/static/css/css.css
@@ -66,6 +66,15 @@
 }
 
 
+.pet_details_link{
+	display: flex;
+	font-size: 15px;	
+	color: brown;
+	text-decoration: none;
+    padding: 2px;
+}
+
+
  .pet-profiles{
 	font-size: 15px;	
 	color: brown;
