--- a/newP/templates/pet_owner/appointments.html
+++ b/newP/templates/pet_owner/appointments.html
@@ -61,11 +61,11 @@
         {% endif %}
 
         
-        {% if m.appointment_status == 'Billed' %}
+        <!-- {% if m.appointment_status == 'Billed' %}
 
-        <a href="/bills/3" class="btn btn-sm btn-success"> Pay Bill </a> 
+    <a href="/bills/ {{ m.bills_appointment_relate.bills_id }}" class="btn btn-sm btn-success"> Pay Bill </a> 
 
-        {% endif %}
+        {% endif %} -->
 
 
         
