--- a/newP/templates/pet_owner/dashboard.html
+++ b/newP/templates/pet_owner/dashboard.html
@@ -23,7 +23,7 @@
 
 					<button type="button" class="btn btn-outline-dark"> <a href="/bills_history"> BILLS HISTORY </a> </button>
 
-					<button type="button" class="btn btn-outline-dark"> <a href="/profile"> USER PROFILE </a> </button>
+					<button type="button" class="btn btn-outline-dark"> <a href="/medics"> MEDICAL RECORDS </a> </button>
 
 				</div>
 		
