--- a/newP/templates/pet_owner/pet_details.html
+++ b/newP/templates/pet_owner/pet_details.html
@@ -18,11 +18,9 @@
 					
 					<button type="button" class="btn btn-outline-dark"> <a href="/medics"> MEDICAL RECORDS </a> </button>
 
-					<button type="button" class="btn btn-outline-dark"> <a href="/payment"> MY BILLS </a> </button>
-
 					<button type="button" class="btn btn-outline-dark"> <a href="/profile"> USER PROFILE </a> </button>
 
-                    <button type="button" class="btn btn-outline-dark"> <a href="/book_appointment"> BOOK APPOINTMENT </a> </button>
+					<button type="button" class="btn btn-outline-dark"> <a href="/pet_appointments"> APPOINTMENTS </a> </button>
 
                     
 
